# red_social_BD

./: Dockerfile  README.md  app.py  auth.py  config.py  consultas.sql  db.py  docker-compose.yml  pyproject.toml  querys_crearDB_Postgres.sql  user.py
